# Ne-Znayu

./: .gitignore  CMakeLists.txt  README.md  actor_vm.c  actor_vm.h  async.py  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  global_vars.c  global_vars.h  main.c  memory.c  memory.h  object.c  object.h  queue.c  queue.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
test/: run_all.py
test/actor/: call_message.nz  dfs.nz  empty.nz  full_syntax.nz  local_reference_self.nz  reference_self.nz
test/benchmark/: calculator.nz
test/for/: actor_in_body.nz
test/other/: many_vars.nz
